--- a/style.css
+++ b/style.css
@@ -173,3 +173,15 @@ header h1 {
         font-size: 0.9em;
     }
 }
+
+#movies, #tvSeries {
+    margin-bottom: 30px;
+}
+
+#movies h2, #tvSeries h2 {
+    font-size: 1.5em;
+    margin-bottom: 15px;
+    color: #eee;
+    border-bottom: 2px solid #00bcd4;
+    padding-bottom: 5px;
+}
